# SM_project

./: CMakeLists.txt  KinectClass.cpp  KinectClass.h  MySocket.cpp  MySocket.h  My_main.cpp  PCDProcessClass.cpp  PCDProcessClass.h  PCD_Function.cpp  PCD_Function.h  PCL_KinectClass.cpp  PCL_KinectClass.h  README.md  VotingSchemePoseEstimation.cpp  VotingSchemePoseEstimation_Class.h  mahjong_CAD_model.pcd  mahjong_CAD_model0_90.pcd  mahjong_CAD_model90_0.pcd  mahjong_CAD_model_all.pcd  mahjong_theta_0_phi_0.ply  mahjong_theta_0_phi_180.pcd  mahjong_theta_0_phi_180.ply  mahjong_theta_0_phi_90.ply  mahjong_theta_135_phi_45.ply  mahjong_theta_225_phi_-45.ply  mahjong_theta_270_phi_0.pcd  mahjong_theta_315_phi_-45.ply  mahjong_theta_315_phi_45.ply  mahjong_theta_45_phi_-45.ply  mahjong_theta_45_phi_45.ply  mahjong_theta_90_phi_0.pcd  mahjong_theta_90_phi_0.ply
models/: mahjong_theta_0_phi_0.pcd  mahjong_theta_0_phi_270.pcd  mahjong_theta_0_phi_270.ply  mahjong_theta_0_phi_90.pcd  mahjong_theta_135_phi_-45.ply  mahjong_theta_180_phi_0.pcd  mahjong_theta_180_phi_0.ply  mahjong_theta_225_phi_45.ply  mahjong_theta_270_phi_0.ply
